# offline_crates

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE.txt  README.md
.github/workflows/: docker.yml
downloader/: Cargo.toml
downloader/src/: main.rs
lib/: Cargo.toml
lib/src/: lib.rs  structures.rs
offline_crates_server/: Cargo.toml
offline_crates_server/src/: main.rs  repository.rs
offline_test/: Cargo.toml
offline_test/.cargo/: config
packaging/: Dockerfile  build_docker.sh
repository/: Cargo.toml
repository/src/: lib.rs
server/: Cargo.toml
server/src/: main.rs
src/: main.rs  repository.rs
