[package]
name = "offline_crates"
version = "0.1.0"
authors = ["Martyn P <>"]
edition = "2018"

[[bin]]
name = "offline_crates"
path = "src/main.rs"

[lib]
name = "offline_crates"
path = "src/repository.rs"

[dependencies]
log = "0.4"
git2 = "0.18"
rustc-serialize = "0.3"
progress_bar = "0.1.0"
reqwest = { version = "0.12", features = ["blocking"] }
sha2 = "0.8"
hex = "0.4"
clap = "2.33"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
