[package]
name = "downloader"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.8", features = ["derive"] }
env_logger = "0.11.3"
futures = "0.3.30"
git2 = { version = "0.19.0", features = ["vendored-libgit2", "vendored-openssl"] }
glob = "0.3.1"
hex = "0.4.3"
log = "0.4.22"
progress_bar = "1.0.5"
reqwest = { version = "0.12.5", features = ["native-tls-vendored", "stream"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
sha2 = "0.10.8"
tokio = { version = "1.38.0", features = ["full"] }

lib = {path = "../lib"}