[package]
authors = ["Martyn P <>"]
edition = "2018"
name = "offline_crates_server"
version = "0.1.0"

[dependencies]
clap = "2.33"
progress_bar = "0.1.0"
reqwest = "0.12"
rocket = "0.5"
rustc-serialize = "0.3"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1"

hex = "0.4.0"
offline_crates = {path = "../"}
sha2 = "0.8.0"
