[package]
name = "repository"
version = "0.1.0"
authors = ["martynp <12006448+martynp@users.noreply.github.com>"]
edition = "2018"

[dependencies]
rustc-serialize = "0.3"
progress_bar = "0.1.0"
reqwest = "0.9.22"
sha2 = "0.8.0"
hex = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.44"
